--- a/CountersApp/Views/Home/Index.cshtml
+++ b/CountersApp/Views/Home/Index.cshtml
@@ -1,4 +1,1 @@
-﻿@model System.Tuple<int,int>
-<h2>Home</h2>
-<div>Count = @Model.Item1</div>
-<div>Count more than one = @Model.Item2</div>
+﻿<h2>Home</h2>
