--- a/CountersApp/Views/Home/Index.cshtml
+++ b/CountersApp/Views/Home/Index.cshtml
@@ -1,1 +1,10 @@
 ﻿<h2>Home</h2>
+<div>
+    <a href="/counterspage">Counters</a>
+</div>
+<div>
+    <a href="/addingcounter">Add new counter</a>
+</div>
+<div>
+    <a href="/home/countmorethanone">Show query - simple</a>
+</div>
