--- a/CountersApp/Views/Home/Index.cshtml
+++ b/CountersApp/Views/Home/Index.cshtml
@@ -8,3 +8,6 @@
 <div>
     <a href="/home/countmorethanone">Show query - simple</a>
 </div>
+<div>
+    <a href="/CountMoreThanOne.html">Show query - ajax</a>
+</div>
